--- a/style-coba.css
+++ b/style-coba.css
@@ -1,12 +1,18 @@
 body {
-    height: 100%;
     margin: 0px;
-    display: flex;
-    flex-direction: column;
+
 }
 
 * {
     box-sizing: border-box;
+}
+
+.container-all {
+    height: 100vh;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
 }
 
 .navbar {
@@ -17,11 +23,17 @@ body {
 
 }
 
+.nav-button {
+    align-content: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .main-button {
     margin-left: 10px;
     margin-right: 10px;
     text-decoration: none;
     border: 1px solid orange;
+    border-radius: 5px;
     padding: 5px;
 
 }
@@ -30,24 +42,23 @@ body {
     background-color: white;
 }
 
-.nav-button {
-    align-content: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
 
-.cards {
-    width: 100%;
+.cards-container {
+    /* width: 100%; */
+    height: 200;
     margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10px;
+    margin-right: 10px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    flex: auto
 }
 
 .card {
-    box-shadow: 0.5px 0.5px grey;
+    box-shadow: 1px 1px grey;
     width: 300px;
+    height: 400px;
 }
 
 .card:hover {
